src/bindings.h

  /// Play already loaded sound identified by [hash]
  ///
  /// [soundHash] the unique sound hash of a sound
  /// [busId] the bus ID to play the sound on. 0 means the main engine.
  /// [volume] 1.0f full volume
  /// [pan] 0.0f centered
  /// [paused] 0 not paused
  /// [looping] whether to start the sound in looping state.
  /// [loopingStartAt] If looping is enabled, the loop point is, by default,
  /// the start of the stream. The loop start point can be set with this
  /// [loopingStartOffsetAt] Optional exact frame offset to restart looping
  /// from (-1 = inactive).
  /// [loopingEndOffsetAt] Optional exact frame offset to loop before
  /// (-1 = inactive).
  /// [scale] relative playback speed multiplier (1.0f = normal speed).
  /// [handle] pointer to the handle for this new sound
  /// Return the error if any and a new [handle] of this sound
  FFI_PLUGIN_EXPORT enum PlayerErrors play(
      unsigned int soundHash, unsigned int busId, float volume, float pan,
      bool paused, bool looping, double loopingStartAt, double loopingEndAt,
      int loopingStartOffsetAt, int loopingEndOffsetAt, float scale,
      unsigned int *handle);
  /// Variant of [play] that takes an additional parameter, the time offset
  /// for the sound.
  ///
  /// While the vanilla [play] tries to play sounds as soon as possible,
  /// [playClocked] will delay the start of sounds so that rapidly launched
  /// sounds don't all get clumped to the start of the next outgoing sound
  /// buffer.
  ///
  /// [soundHash] the unique sound hash of a sound
  /// [soundTime] your app's "physics time", in seconds. SoLoud will use that
  /// time (as well as the time previously used) to calculate the delay
  /// between two sound effects.
  /// [volume] 1.0f full volume
  /// [pan] 0.0f centered
  /// [busId] the bus ID to play the sound on. 0 means the main engine.
  /// [scale] relative playback speed multiplier (1.0f = normal speed).
  /// [looping] whether the sound loops upon reaching the end.
  /// [loopingStartAt] time position in seconds to restart playback when
  /// looping.
  /// [loopingEndAt] If greater than zero, loop before this time.
  /// [loopingStartOffsetAt] Optional exact frame offset to restart looping
  /// from (-1 = inactive).
  /// [loopingEndOffsetAt] Optional exact frame offset to loop before
  /// (-1 = inactive).
  /// [handle] pointer to the handle for this new sound
  /// Return the error if any and a new [handle] of this sound
  FFI_PLUGIN_EXPORT enum PlayerErrors playClocked(
      unsigned int soundHash, double soundTime, unsigned int busId,
      float volume, float pan, float scale, bool looping,
      double loopingStartAt, double loopingEndAt, int loopingStartOffsetAt,
      int loopingEndOffsetAt, unsigned int *handle);
  /// Get the engine's global stream time, in seconds.
  ///
  /// This is the clock the mixer advances at the start of every output
  /// buffer and the time base used by [playScheduled], [stopScheduled] and
  /// [fadeScheduled]. It only advances while the audio device is mixing.
  ///
  /// Return the engine time in seconds.
  FFI_PLUGIN_EXPORT double getEngineTime();
  /// Start playing a sound at an absolute engine time (see [getEngineTime]),
  /// with sample accuracy.
  ///
  /// Unlike [playClocked] there is no anchor and no re-anchor guard, so
  /// sounds can be scheduled arbitrarily far in the future. A time in the
  /// past plays as soon as possible.
  ///
  /// [soundHash] the unique sound hash of a sound
  /// [atTime] the absolute engine time, in seconds, at which the sound
  /// should start
  /// [duration] if greater than zero, the sound is automatically stopped
  /// at [atTime] + [duration]
  /// [busId] the bus ID to play the sound on. 0 means the main engine.
  /// [volume] 1.0f full volume
  /// [pan] 0.0f centered
  /// [scale] relative playback speed multiplier (1.0f = normal speed)
  /// [looping] whether the sound loops upon reaching the end
  /// [loopingStartAt] time position in seconds to restart playback when
  /// looping
  /// [handle] pointer to the handle for this new sound
  /// Return the error if any and a new [handle] of this sound
  /// [loopingStartOffsetAt] Optional exact frame offset to restart looping
  /// from (-1 = inactive).
  /// [loopingEndOffsetAt] Optional exact frame offset to loop before
  /// (-1 = inactive).
  FFI_PLUGIN_EXPORT enum PlayerErrors playScheduled(
      unsigned int soundHash, double atTime, double duration,
      unsigned int busId, float volume, float pan, float scale, bool looping,
      double loopingStartAt, double loopingEndAt, int loopingStartOffsetAt,
      int loopingEndOffsetAt, unsigned int *handle);
  /// Get the effect parameter with id [attributeId] of [filterType].
  ///
  /// [handle] the handle to get the filter to. If equal to 0, it gets the
  /// global filter.
  /// [busId] the bus to check the filter.
  /// If both [handle] and [busId] are =0 this function searches in the global
  /// filters.
  /// [filterType] filter to modify a param. Returns the value of param or
  /// 9999.0 if the filter is not found.
  FFI_PLUGIN_EXPORT enum PlayerErrors getFilterParams(
      unsigned int handle, unsigned int busId, enum FilterType filterType,
      int attributeId, float *filterValue);
  /// Fades a parameter of a filter.
  ///
  /// [handle] the handle of the voice to apply the fade. If equal to 0, it
  /// fades the global filter.
  /// [busId] the bus to check the filter.
  /// If both [handle] and [busId] are =0 this function searches in the global
  /// filters.
  /// [filterType] filter to modify a param.
  /// [attributeId] the attribute index to fade.
  /// [to] value the attribute should go in [time] duration.
  /// [time] the fade slope duration. Returns [PlayerErrors.noError] if
  /// no errors.
  FFI_PLUGIN_EXPORT enum PlayerErrors
  fadeFilterParameter(unsigned int handle, unsigned int busId,
                      enum FilterType filterType, int attributeId, float to,
                      float time);
  /// Oscillate a parameter of a filter.
  ///
  /// [handle] the handle of the voice to apply the fade. If equal to 0, it
  /// fades the global filter.
  /// [busId] the bus to check the filter.
  /// If both [handle] and [busId] are =0 this function searches in the global
  /// filters.
  /// [filterType] filter to modify a param.
  /// [attributeId] the attribute index to fade.
  /// [from] the starting value the attribute sould start to oscillate.
  /// [to] the ending value the attribute sould end to oscillate.
  /// [time] the fade slope duration.
  /// Returns [PlayerErrors.noError] if no errors.
  FFI_PLUGIN_EXPORT enum PlayerErrors
  oscillateFilterParameter(unsigned int handle, unsigned int busId,
                           enum FilterType filterType, int attributeId,
                           float from, float to, float time);
  /////////////////////////////////////////
  /// 3D audio methods
  /////////////////////////////////////////

  /// play3d() is the 3d version of the play() call
  ///
  /// [posX], [posY], [posZ] are the audio source position coordinates.
  /// [velX], [velY], [velZ] are the audio source velocity.
  /// [looping] whether to start the sound in looping state.
  /// [loopingStartAt] If looping is enabled, the loop point is, by default,
  /// the start of the stream. The loop start point can be set with this
  /// parameter.
  /// [handle] pointer to the handle for this new sound
  /// Return the error if any
  FFI_PLUGIN_EXPORT enum PlayerErrors play3d(
      unsigned int soundHash, unsigned int busId, float posX, float posY,
      float posZ, float velX, float velY, float velZ, float volume,
      bool paused, bool looping, double loopingStartAt, unsigned int *handle);
  /// Play a 3D sound with an optional bounded loop region.
  ///
  /// This additive entry point preserves the ABI of [play3d].
  /// [loopingEndAt] If greater than zero, loop before this time. Zero uses
  /// the natural end of the stream.
  FFI_PLUGIN_EXPORT enum PlayerErrors play3dWithLoopPoints(
      unsigned int soundHash, unsigned int busId, float posX, float posY,
      float posZ, float velX, float velY, float velZ, float volume,
      bool paused, bool looping, double loopingStartAt, double loopingEndAt,
      int loopingStartOffsetAt, int loopingEndOffsetAt, float scale,
      unsigned int *handle);
  /// play3dClocked() is the 3d version of the playClocked() call.
  ///
  /// Instead of panning like with the "2d" version of the call, the 3d
  /// version requires 3d position and optionally velocity vector. Like its
  /// 2d version, this one delays the start of the sound based on the
  /// [soundTime] parameter, so that firing off sounds rapidly won't cause
  /// the sounds to "clump" together at the start of the next sound buffer.
  ///
  /// [soundHash] the unique sound hash of a sound
  /// [soundTime] your app's "physics time", in seconds.
  /// [posX], [posY], [posZ] are the audio source position coordinates.
  /// [velX], [velY], [velZ] are the audio source velocity.
  /// [volume] 1.0f full volume
  /// [busId] the bus ID to play the sound on. 0 means the main engine.
  /// [handle] pointer to the handle for this new sound
  /// Return the error if any and a new [handle] of this sound
  FFI_PLUGIN_EXPORT enum PlayerErrors play3dClocked(
      unsigned int soundHash, double soundTime, unsigned int busId,
      float posX, float posY, float posZ, float velX, float velY, float velZ,
      float volume, float scale, bool looping, double loopingStartAt,
      double loopingEndAt, int loopingStartOffsetAt, int loopingEndOffsetAt,
      unsigned int *handle);
  /// play3dScheduled() is the 3d version of the playScheduled() call.
  ///
  /// Instead of panning like with the "2d" version of the call, the 3d
  /// version requires 3d position and optionally velocity vector. Like its
  /// 2d version, this one starts playing a sound at an absolute engine time
  /// (see [getEngineTime]), with sample accuracy.
  ///
  /// [soundHash] the unique sound hash of a sound
  /// [atTime] the absolute engine time, in seconds, at which the sound
  /// should start.
  /// [duration] if greater than zero, the sound is automatically stopped at
  /// [atTime] + [duration].
  /// [busId] the bus ID to play the sound on. 0 means the main engine.
  /// [posX], [posY], [posZ] are the audio source position coordinates.
  /// [velX], [velY], [velZ] are the audio source velocity.
  /// [volume] 1.0f full volume
  /// [scale] relative playback speed multiplier (1.0f = normal speed)
  /// [looping] whether the sound loops upon reaching the end
  /// [loopingStartAt] time position in seconds to restart playback when
  /// looping
  /// [loopingEndAt] optional exclusive end point for looping
  /// [loopingStartOffsetAt] Optional exact frame offset to restart looping
  /// from (-1 = inactive).
  /// [loopingEndOffsetAt] Optional exact frame offset to loop before
  /// (-1 = inactive).
  /// [handle] pointer to the handle for this new sound
  /// Return the error if any and a new [handle] of this sound
  FFI_PLUGIN_EXPORT enum PlayerErrors play3dScheduled(
      unsigned int soundHash, double atTime, double duration,
      unsigned int busId, float posX, float posY, float posZ, float velX,
      float velY, float velZ, float volume, float scale, bool looping,
      double loopingStartAt, double loopingEndAt, int loopingStartOffsetAt,
      int loopingEndOffsetAt, unsigned int *handle);