lib/src/bindings/flutter_soloud_ffigen.dart


/// Get the effect parameter with id [attributeId] of [filterType].
///
/// [handle] the handle to get the filter to. If equal to 0, it gets the
/// global filter.
/// [busId] the bus to check the filter.
/// If both [handle] and [busId] are =0 this function searches in the global
/// filters.
/// [filterType] filter to modify a param. Returns the value of param or
/// 9999.0 if the filter is not found.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.UnsignedInt,
    ffi.UnsignedInt,
    ffi.UnsignedInt,
    ffi.Int,
    ffi.Pointer<ffi.Float>,
  )
>(symbol: 'getFilterParams')
external int _getFilterParams(
  int handle,
  int busId,
  int filterType,
  int attributeId,
  ffi.Pointer<ffi.Float> filterValue,
);

PlayerErrors getFilterParams(
  int handle,
  int busId,
  FilterType filterType,
  int attributeId,
  ffi.Pointer<ffi.Float> filterValue,
) => PlayerErrors.fromValue(
  _getFilterParams(handle, busId, filterType.value, attributeId, filterValue),
);

/// Fades a parameter of a filter.
///
/// [handle] the handle of the voice to apply the fade. If equal to 0, it
/// fades the global filter.
/// [busId] the bus to check the filter.
/// If both [handle] and [busId] are =0 this function searches in the global
/// filters.
/// [filterType] filter to modify a param.
/// [attributeId] the attribute index to fade.
/// [to] value the attribute should go in [time] duration.
/// [time] the fade slope duration. Returns [PlayerErrors.noError] if
/// no errors.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.UnsignedInt,
    ffi.UnsignedInt,
    ffi.UnsignedInt,
    ffi.Int,
    ffi.Float,
    ffi.Float,
  )
>(symbol: 'fadeFilterParameter')
external int _fadeFilterParameter(
  int handle,
  int busId,
  int filterType,
  int attributeId,
  double to,
  double time,
);

PlayerErrors fadeFilterParameter(
  int handle,
  int busId,
  FilterType filterType,
  int attributeId,
  double to,
  double time,
) => PlayerErrors.fromValue(
  _fadeFilterParameter(handle, busId, filterType.value, attributeId, to, time),
);

/// Oscillate a parameter of a filter.
///
/// [handle] the handle of the voice to apply the fade. If equal to 0, it
/// fades the global filter.
/// [busId] the bus to check the filter.
/// If both [handle] and [busId] are =0 this function searches in the global
/// filters.
/// [filterType] filter to modify a param.
/// [attributeId] the attribute index to fade.
/// [from] the starting value the attribute sould start to oscillate.
/// [to] the ending value the attribute sould end to oscillate.
/// [time] the fade slope duration.
/// Returns [PlayerErrors.noError] if no errors.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.UnsignedInt,
    ffi.UnsignedInt,
    ffi.UnsignedInt,
    ffi.Int,
    ffi.Float,
    ffi.Float,
    ffi.Float,
  )
>(symbol: 'oscillateFilterParameter')
external int _oscillateFilterParameter(
  int handle,
  int busId,
  int filterType,
  int attributeId,
  double from,
  double to,
  double time,
);

PlayerErrors oscillateFilterParameter(
  int handle,
  int busId,
  FilterType filterType,
  int attributeId,
  double from,
  double to,
  double time,
) => PlayerErrors.fromValue(
  _oscillateFilterParameter(
    handle,
    busId,
    filterType.value,
    attributeId,
    from,
    to,
    time,
  ),
);

/// play3d() is the 3d version of the play() call
///
/// [posX], [posY], [posZ] are the audio source position coordinates.
/// [velX], [velY], [velZ] are the audio source velocity.
/// [looping] whether to start the sound in looping state.
/// [loopingStartAt] If looping is enabled, the loop point is, by default,
/// the start of the stream. The loop start point can be set with this
/// parameter.
/// [handle] pointer to the handle for this new sound
/// Return the error if any
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.UnsignedInt,
    ffi.UnsignedInt,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Bool,
    ffi.Bool,
    ffi.Double,
    ffi.Pointer<ffi.UnsignedInt>,
  )
>(symbol: 'play3d')
external int _play3d(
  int soundHash,
  int busId,
  double posX,
  double posY,
  double posZ,
  double velX,
  double velY,
  double velZ,
  double volume,
  bool paused,
  bool looping,
  double loopingStartAt,
  ffi.Pointer<ffi.UnsignedInt> handle,
);

PlayerErrors play3d(
  int soundHash,
  int busId,
  double posX,
  double posY,
  double posZ,
  double velX,
  double velY,
  double velZ,
  double volume,
  bool paused,
  bool looping,
  double loopingStartAt,
  ffi.Pointer<ffi.UnsignedInt> handle,
) => PlayerErrors.fromValue(
  _play3d(
    soundHash,
    busId,
    posX,
    posY,
    posZ,
    velX,
    velY,
    velZ,
    volume,
    paused,
    looping,
    loopingStartAt,
    handle,
  ),
);

/// Play a 3D sound with an optional bounded loop region.
///
/// This additive entry point preserves the ABI of [play3d].
/// [loopingEndAt] If greater than zero, loop before this time. Zero uses
/// the natural end of the stream.
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.UnsignedInt,
    ffi.UnsignedInt,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Bool,
    ffi.Bool,
    ffi.Double,
    ffi.Double,
    ffi.Int,
    ffi.Int,
    ffi.Float,
    ffi.Pointer<ffi.UnsignedInt>,
  )
>(symbol: 'play3dWithLoopPoints')
external int _play3dWithLoopPoints(
  int soundHash,
  int busId,
  double posX,
  double posY,
  double posZ,
  double velX,
  double velY,
  double velZ,
  double volume,
  bool paused,
  bool looping,
  double loopingStartAt,
  double loopingEndAt,
  int loopingStartOffsetAt,
  int loopingEndOffsetAt,
  double scale,
  ffi.Pointer<ffi.UnsignedInt> handle,
);

PlayerErrors play3dWithLoopPoints(
  int soundHash,
  int busId,
  double posX,
  double posY,
  double posZ,
  double velX,
  double velY,
  double velZ,
  double volume,
  bool paused,
  bool looping,
  double loopingStartAt,
  double loopingEndAt,
  int loopingStartOffsetAt,
  int loopingEndOffsetAt,
  double scale,
  ffi.Pointer<ffi.UnsignedInt> handle,
) => PlayerErrors.fromValue(
  _play3dWithLoopPoints(
    soundHash,
    busId,
    posX,
    posY,
    posZ,
    velX,
    velY,
    velZ,
    volume,
    paused,
    looping,
    loopingStartAt,
    loopingEndAt,
    loopingStartOffsetAt,
    loopingEndOffsetAt,
    scale,
    handle,
  ),
);

/// play3dClocked() is the 3d version of the playClocked() call.
///
/// Instead of panning like with the "2d" version of the call, the 3d
/// version requires 3d position and optionally velocity vector. Like its
/// 2d version, this one delays the start of the sound based on the
/// [soundTime] parameter, so that firing off sounds rapidly won't cause
/// the sounds to "clump" together at the start of the next sound buffer.
///
/// [soundHash] the unique sound hash of a sound
/// [soundTime] your app's "physics time", in seconds.
/// [posX], [posY], [posZ] are the audio source position coordinates.
/// [velX], [velY], [velZ] are the audio source velocity.
/// [volume] 1.0f full volume
/// [busId] the bus ID to play the sound on. 0 means the main engine.
/// [handle] pointer to the handle for this new sound
/// Return the error if any and a new [handle] of this sound
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.UnsignedInt,
    ffi.Double,
    ffi.UnsignedInt,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Bool,
    ffi.Double,
    ffi.Double,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.UnsignedInt>,
  )
>(symbol: 'play3dClocked')
external int _play3dClocked(
  int soundHash,
  double soundTime,
  int busId,
  double posX,
  double posY,
  double posZ,
  double velX,
  double velY,
  double velZ,
  double volume,
  double scale,
  bool looping,
  double loopingStartAt,
  double loopingEndAt,
  int loopingStartOffsetAt,
  int loopingEndOffsetAt,
  ffi.Pointer<ffi.UnsignedInt> handle,
);

PlayerErrors play3dClocked(
  int soundHash,
  double soundTime,
  int busId,
  double posX,
  double posY,
  double posZ,
  double velX,
  double velY,
  double velZ,
  double volume,
  double scale,
  bool looping,
  double loopingStartAt,
  double loopingEndAt,
  int loopingStartOffsetAt,
  int loopingEndOffsetAt,
  ffi.Pointer<ffi.UnsignedInt> handle,
) => PlayerErrors.fromValue(
  _play3dClocked(
    soundHash,
    soundTime,
    busId,
    posX,
    posY,
    posZ,
    velX,
    velY,
    velZ,
    volume,
    scale,
    looping,
    loopingStartAt,
    loopingEndAt,
    loopingStartOffsetAt,
    loopingEndOffsetAt,
    handle,
  ),
);

/// play3dScheduled() is the 3d version of the playScheduled() call.
///
/// Instead of panning like with the "2d" version of the call, the 3d
/// version requires 3d position and optionally velocity vector. Like its
/// 2d version, this one starts playing a sound at an absolute engine time
/// (see [getEngineTime]), with sample accuracy.
///
/// [soundHash] the unique sound hash of a sound
/// [atTime] the absolute engine time, in seconds, at which the sound
/// should start.
/// [duration] if greater than zero, the sound is automatically stopped at
/// [atTime] + [duration].
/// [busId] the bus ID to play the sound on. 0 means the main engine.
/// [posX], [posY], [posZ] are the audio source position coordinates.
/// [velX], [velY], [velZ] are the audio source velocity.
/// [volume] 1.0f full volume
/// [scale] relative playback speed multiplier (1.0f = normal speed)
/// [looping] whether the sound loops upon reaching the end
/// [loopingStartAt] time position in seconds to restart playback when
/// looping
/// [loopingEndAt] optional exclusive end point for looping
/// [loopingStartOffsetAt] Optional exact frame offset to restart looping
/// from (-1 = inactive).
/// [loopingEndOffsetAt] Optional exact frame offset to loop before
/// (-1 = inactive).
/// [handle] pointer to the handle for this new sound
/// Return the error if any and a new [handle] of this sound
@ffi.Native<
  ffi.UnsignedInt Function(
    ffi.UnsignedInt,
    ffi.Double,
    ffi.Double,
    ffi.UnsignedInt,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Float,
    ffi.Bool,
    ffi.Double,
    ffi.Double,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.UnsignedInt>,
  )
>(symbol: 'play3dScheduled')
external int _play3dScheduled(
  int soundHash,
  double atTime,
  double duration,
  int busId,
  double posX,
  double posY,
  double posZ,
  double velX,
  double velY,
  double velZ,
  double volume,
  double scale,
  bool looping,
  double loopingStartAt,
  double loopingEndAt,
  int loopingStartOffsetAt,
  int loopingEndOffsetAt,
  ffi.Pointer<ffi.UnsignedInt> handle,
);

PlayerErrors play3dScheduled(
  int soundHash,
  double atTime,
  double duration,
  int busId,
  double posX,
  double posY,
  double posZ,
  double velX,
  double velY,
  double velZ,
  double volume,
  double scale,
  bool looping,
  double loopingStartAt,
  double loopingEndAt,
  int loopingStartOffsetAt,
  int loopingEndOffsetAt,
  ffi.Pointer<ffi.UnsignedInt> handle,
) => PlayerErrors.fromValue(
  _play3dScheduled(
    soundHash,
    atTime,
    duration,
    busId,
    posX,
    posY,
    posZ,
    velX,
    velY,
    velZ,
    volume,
    scale,
    looping,
    loopingStartAt,
    loopingEndAt,
    loopingStartOffsetAt,
    loopingEndOffsetAt,
    handle,
  ),
);
